# CX_Compiler

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyTextEdit.cpp  MyTextEdit.h  README.md  StackDialog.cpp  StackDialog.h  TextItem.h  main.cpp  res.qrc
compiler/: CMakeLists.txt  Error.h  Parser.cpp  Parser.h  Symbol.h  Virtual.h  main.cpp
interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h
